sonar-server/src/main/less/ui.less
@import "variables";
@import "mixins";



@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 300;
  src: url('../fonts/roboto-light.woff') format('woff');
}
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/roboto-normal.woff') format('woff');
}

@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 500;
  src: url('../fonts/roboto-medium.woff') format('woff');
}
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  src: url('../fonts/roboto-bold.woff') format('woff');
}


body {
  font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

select, input, button, textarea {
  font-size: 99%;
  font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

/*
 * Common
 */

.nowrap { white-space: nowrap; }

.text-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}


/*
 * Links
 */

a {
  cursor: pointer;
}

.link() {
  outline: none;
  text-decoration: none;
  .trans;

  &:hover { color: @blue; }

  &:active, &:focus {
    color: @darkBlue;
  }
}

.chevron-link {
  &:after {
    content: "\f105";
    position: relative;
    top: -1px;
    vertical-align: middle;
    margin-left: 0.4em;
    font-family: 'sonar';
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
  }
}

.base-link {
  color: @baseFontColor;
  .link;
}

.highlighted-link {
  color: @darkBlue;
  .link;
}

.widget-link {
  .highlighted-link;
  border-bottom: 1px solid @lightBlue;
}

.widget-link-red {
  color: @red;
  border-bottom-color: @lightRed;

  &:hover, &:active, &:focus {
    color: @red;
    border-bottom-color: @red;
  }
}



/*
 * Inputs
 */

input[type=text],
input[type=password],
input[type=email],
textarea {
  border: 1px solid @darkGrey;
  .box-sizing(border-box);
  background: #fff;
  color: @baseFontColor;
  .trans(border-color);

  &:active,
  &:focus {
    border-color: @highlighted;
    box-shadow: none;
    outline: none;
  }
}

input[type=text],
input[type=password],
input[type=email] {
  height: 22px;
  padding: 0 3px;
}

textarea {
  padding: 3px;
}

button,
.button,
input[type=submit],
input[type=button] {
  display: inline-block;
  vertical-align: baseline;
  height: 22px;
  margin: 0 1px;
  padding: 2px 10px;

  border: 1px solid @darkGrey;
  .box-sizing(border-box);

  background: #f4f4f4;

  color: @baseFontColor;
  font-weight: bold;
  font-size: @baseFontSize;
  text-align: center;
  text-decoration: none;

  cursor: pointer;
  outline: none;
  .trans(border-color);

  &:hover, &.active {
    border-color: #5281a0;
    background: #4b9fd5;
    color: #fff;
  }

  &:active {
    border-color: #2790c0;
    background: #78bdea;
    color: #fff;
  }

  &:focus {
    border-color: @highlighted;
  }

  &[disabled],
  &[disabled]:hover,
  &[disabled]:active,
  &[disabled]:focus {
    color: #bbb;
    border-color: #ddd;
    background: #ebebeb;
    cursor: default;
  }
}

.button-red {
  &:hover, &:focus {
    border-color: #900;
    background: lighten(#900, 10%);
    color: #fff;
  }

  &:active {
    border-color: #900;
    background: lighten(#900, 20%);
  }
}

.button-clean,
.button-clean:hover,
.button-clean:focus {
  margin: 0;
  padding: 0;
  border: none;
  background: transparent;
  color: @baseFontColor;
}

.button-group {
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  white-space: nowrap;

  & > button {
    position: relative;
    z-index: 2;
    display: inline-block;
    vertical-align: middle;
    margin: 0;
    padding: 2px 8px;
    font-size: @smallFontSize;
    font-weight: normal;
    cursor: pointer;

    &:hover, &:focus, &:active, &.active {
      z-index: 3;
    }
  }

  & > button + button {
    margin-left: -1px;
  }

  & > a {
    vertical-align: middle;
    margin: 0 8px;
    font-size: @smallFontSize;
  }
}

